--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
     <script>
         // Your web app's Firebase configuration
         var firebaseConfig = {
-            apiKey: "AIzaSyAxJon3Z-y6pn6Qe4RiduyIqkDW7UqVhK4",
-            authDomain: "svg-db.firebaseapp.com",
-            databaseURL: "https://svg-db.firebaseio.com",
-            projectId: "svg-db",
-            storageBucket: "svg-db.appspot.com",
-            messagingSenderId: "868941547140",
-            appId: "1:868941547140:web:9a78443a439d94c1c964d1"
+            apiKey: "",
+            authDomain: "",
+            databaseURL: "",
+            projectId: "",
+            storageBucket: "",
+            messagingSenderId: "",
+            appId: ""
         };
         // Initialize Firebase
         firebase.initializeApp(firebaseConfig);
